# AgentRL

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: build-training-base-image.yml  ci-controller.yml  ci-eval.yaml  ci-trainer.yml  ci-worker.yml
controller/: .gitignore  Dockerfile  go.mod  go.sum  main.go
controller/cmd/: controller.go  root.go  serve.go  snapshots.go
controller/dashboard/: embed.go  index.html  package.json
controller/dashboard/src/: App.vue  main.ts
controller/dashboard/src/components/: A11ySwitch.vue  RefreshSetting.vue  SessionHistoryChart.vue  SessionListItem.vue  TaskCard.vue  WorkerButton.vue  WorkerDetail.vue  WorkerStatusLegend.vue
controller/dashboard/src/pages/: PageDashboard.vue
controller/dashboard/src/stores/: index.ts
controller/internal/cluster/: memberlist.go  nodes.go
controller/internal/controller/: controller.go  grpc.go  handler.go  session.go  task.go  worker.go
controller/internal/middlewares/: dashboard.go
controller/internal/server/: grpc.go  http.go  serve.go
controller/internal/snapshots/: database.go  grpc.go  http.go  manager.go  store.go  tags.go
controller/internal/types/: agent.go  controller.go  task_index.go
controller/internal/utils/: deadlock.go  disk_darwin.go  disk_linux.go  disk_windows.go  io.go  listener.go  logging.go  random.go  task_index.go  time.go  transport.go
docs/: deployment.md  tasks.md
eval/: Dockerfile  pyproject.toml
eval/tests/convert/: test_messages.py
eval/tests/utils/: test_resize_images.py  test_trim_images.py
examples/eval/: check.py  server_agent.py
examples/simple-calculator/: README.md  config.yaml  eval.py  task.py
examples/tests/: check_chat_template.py  debug_guide.py  diagnose_mm_prompt.py  extract_model_constants.py  probe_sglang.py  probe_sglang_prompt_ids.py  test_logic.py  verify_layer5.py  verify_message_patch.py  verify_pipeline_full.py  verify_stage1_mm.py  verify_stage1_mm_v2.py
examples/training/: agentrl_trainer.py  async_trainer.py  async_trainer_mm.py
examples/training/configs/: qw14b_waodk.yaml  qw3b_ws.yaml
extra/docker/: task-worker-template.Dockerfile  training-base.Dockerfile
extra/docker/training-base/: 25.03-cu128-torch271-sglang048.Dockerfile  25.06-cu129-torch280-sglang053.Dockerfile  25.06-cu129-torch280-sglang055.Dockerfile  25.06-cu129-torch291-vllm0112-sglang056.Dockerfile  25.09-cu130-torch290-sglang053.Dockerfile  25.11-cu130-torch290-vllm0112.Dockerfile
extra/scripts/: set_stale.py  testeval.py  tracectl.py
proto/snapshots_v1/: snapshots.proto
trainer/: pyproject.toml
trainer/src/agentrl/trainer/: __init__.py
trainer/src/agentrl/trainer/agentic/: data_provider.py  loops.py  tasks.py
trainer/src/agentrl/trainer/algorithms/: advantage.py  core_algos.py  loss_funcs.py  metrics.py
trainer/src/agentrl/trainer/checkpoint/: checkpoint_manager.py  fsdp_checkpoint_manager.py
trainer/src/agentrl/trainer/components/: buffer.py  buffer_mm.py  context_manager_mm.py  mrope_mm.py  multimodal_task.py  nccl_tensor_comm.py  osworld_env_adapter.py  position_fill_mm.py  rl_agent_adapter.py  task_manager.py  task_manager_mm.py  timer.py
trainer/src/agentrl/trainer/utils/: __init__.py  aio_rwlock.py  sglang_patch.py  torch_functional.py  torch_patch.py  utils.py
trainer/src/agentrl/trainer/workers/: abstract.py  async_sglang_worker.py  async_sglang_worker_mm.py  collective_handle.py  fsdp_worker.py  fsdp_worker_mm.py
worker/: pyproject.toml
(+30 files in other folders)
